return correct user info

the return values were the wrong way around and the image ought to be a
URI not a path.

BUG: 469697


(cherry picked from commit 7d5a7b6fe2ee98b41d3ab51f4ff8e83cd1660f1e)